# SecondBrain

./: .gitignore  CHANGELOG.md  README.md  alembic.ini  config.local.toml.example  config.toml  constraints.txt  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
deploy/: com.secondbrain.daemon.plist  com.secondbrain.menubar.plist  com.secondbrain.web.plist  install.sh
docs/: DEPLOY.md  OPERATIONS.md  ROADMAP.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_speakers.py  0003_knowledge.py  0004_proactive.py  0005_tasks.py  0006_speaker_quality.py  0007_perf_indexes.py
secondbrain/: __init__.py  __main__.py  cli.py  config.py  config_edit.py  daemon.py  deploy.py  health.py  logging_setup.py  repair.py
secondbrain/capture/: __init__.py  devices.py  recorder.py
secondbrain/goals/: __init__.py  link.py  store.py
secondbrain/knowledge/: __init__.py  chat.py  extract.py  graph.py  resolve.py  schema.py
secondbrain/llm/: __init__.py  client.py  jsonout.py
secondbrain/menubar/: __init__.py  app.py
secondbrain/pipeline/: __init__.py  conversation.py  diarize.py  queue.py  transcribe.py  vad.py  worker.py
secondbrain/proactive/: __init__.py  detectors.py  engine.py  ranking.py  store.py
secondbrain/query/: __init__.py  api.py  service.py
secondbrain/search/: __init__.py  combined.py  fulltext.py  semantic.py
secondbrain/security/: __init__.py  auth.py
secondbrain/speaker/: __init__.py  attribution.py  cluster.py  correct.py  enroll.py  reattribute.py  registry.py
secondbrain/storage/: __init__.py  backup.py  db.py  forget.py  models.py  retention.py  schema.py  state.py
secondbrain/tasks/: __init__.py  decompose.py  planner.py  prioritize.py  research.py  store.py
secondbrain/web/static/: app.js
secondbrain/web/templates/: base.html  brief.html  chat.html  day.html  error.html  goals.html  graph.html  health.html  index.html  login.html  person.html  project.html  projects.html  relationships.html  speakers.html  tasks.html  timeline.html
tests/: conftest.py  test_api.py  test_auth.py  test_backup.py  test_backup_health.py  test_chat.py  test_config.py  test_config_edit.py  test_config_local_example.py  test_config_show.py  test_config_validation.py  test_conversation.py  test_daemon.py  test_db.py  test_decompose.py  test_deploy.py  test_detectors.py  test_diarize.py  test_e2e.py  test_engine.py  test_extract.py  test_forget.py  test_goals.py  test_health.py  test_llm.py  test_person.py  test_planner.py  test_prioritize.py  test_projects.py  test_queue.py  test_queue_overview.py  test_ranking.py  test_recorder.py  test_relationships.py  test_remediation.py  test_repair.py  test_research.py  test_resolve.py  test_retention.py  test_search.py  (+10 more)
tests/slow/: test_real_backends.py
