[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secondbrain"
version = "0.1.0"
description = "An always-on, fully-local personal second brain. Phase 1: ambient capture + on-device transcription + searchable transcript log."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "gbhall99" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "typer>=0.12",
    "alembic>=1.13",
    "tomli>=2.0; python_version < '3.11'",
]

# Heavy / platform-specific deps live behind extras so the core logic stays
# installable and testable on Linux/CI without CoreAudio, MLX, or PortAudio.
[project.optional-dependencies]
audio = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "numpy>=1.26",
]
ml = [
    "silero-vad>=5.1",
    "mlx-whisper>=0.4; platform_system == 'Darwin'",
    "parakeet-mlx>=0.2; platform_system == 'Darwin'",
    "sqlite-vec>=0.1.6",
    # <5: sentence-transformers 5.x unconditionally imports torchcodec (for
    # multimodal audio/video) whose native lib is fragile against torch 2.8
    # (fails: "Symbol not found: _aoti_torch_aten_full", and it wants ffmpeg 4-7
    # while Homebrew ships 8). We only need text embeddings (bge-small), so cap
    # below 5 to drop the torchcodec dependency entirely. Nothing else needs
    # transformers>=5.
    "sentence-transformers>=2.7,<5",
    "pyannote.audio>=3.1,<4",  # 4.x changed the pipeline output API (DiarizeOutput)
    # torchaudio 2.9 dropped the classic I/O backend (torchaudio.info /
    # list_audio_backends / AudioMetaData) for torchcodec; pyannote.audio 3.x
    # still requires it, so cap both below 2.9. torch here is only used by
    # pyannote, silero-vad and sentence-transformers (MLX transcription is
    # separate), all of which are fine on <2.9.
    "torch>=2.2,<2.9",
    "torchaudio>=2.2,<2.9",
]
mac = [
    "rumps>=0.4.0; platform_system == 'Darwin'",
]
secure = [
    "sqlcipher3-binary>=0.5",  # SQLCipher driver for at-rest DB encryption
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
sb = "secondbrain.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["secondbrain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PIE", "RET"]
ignore = ["B008"]  # typer/fastapi use function calls in defaults by design

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]  # long assert/setup lines are fine in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: real-backend tests (Ollama/pyannote/MLX); opt-in via SB_SLOW=1, nightly CI only",
]
